Fix overlapping menu

--- a/web/assets/css/haphpy.css
+++ b/web/assets/css/haphpy.css
@@ -19,6 +19,10 @@
 /** Header **/
 
 header#header {
+    padding: 80px 0 0 0;
+}
+
+header#header div {
     padding: 5%;
 }
 
